<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/normal_ba"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/reset_passowrd"
            android:textColor="@color/md_white_1000" />

        <TextView
            android:id="@+id/img_missingPop"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:drawableLeft="@drawable/bar_left" />

        <TextView
            android:id="@+id/verify_switcher"
            android:textColor="@color/md_white_1000"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="@dimen/text_big18_size"
            android:text="@string/e_mail"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/getResetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/md_white_1000"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">


        <EditText
            android:id="@+id/reset_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="12dp"
            android:hint="账号"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp" />

        <EditText
            android:id="@+id/reset_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:drawableLeft="@drawable/mobile"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/verify_code_text"
                android:textSize="@dimen/test_size_default" />

            <EditText
                android:id="@+id/reset_check_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true" />

            <TextView
                android:id="@+id/getResetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@color/normal_bg_three"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/getvernum"
                android:textColor="@color/md_grey_100"
                android:textSize="@dimen/test_size_default" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ResetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/md_white_1000"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/reset_password"
            style="@style/Register_Edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="12dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:background="@color/md_grey_500" />

        <EditText
            android:id="@+id/verify_reset_pass"
            style="@style/Register_Edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="12dp"
            android:hint="@string/login_pwd_again"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_email_reset"
            style="@style/Register_Edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/mobile"
            android:drawablePadding="20dp"
            android:hint="@string/enter_email_hint"
            android:inputType="textWebEmailAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/VerifyCode"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/circle_rect_with_main"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/verify"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/test_size_default" />

</LinearLayout>
