<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/normal_ba"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/text_big16_size"
            android:textColor="@color/md_white_1000" />

        <TextView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:drawableLeft="@drawable/bar_left" />

        <TextView
            android:id="@+id/version_switcher"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:drawableLeft="@drawable/setting" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#88ffffff"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/login_icon_account"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                style="@style/Register_Edit"
                android:layout_marginRight="20dp"
                android:hint="@string/username_register_tip"
                android:imeOptions="actionNext|actionDone"
                android:paddingBottom="8dp"
                android:maxLength="16"
                android:paddingLeft="5dp"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/login_icon_password"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/et_password"
                style="@style/Register_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/login_icon_password"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password_again"
                style="@style/Register_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/login_pwd_again"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/mobile"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneNum"
                style="@style/Register_Edit"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext|actionDone"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingTop="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_verify_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/verify_code_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/check_num"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="#88ffffff"
                android:gravity="center"
                android:imeOptions="actionNext|actionDone"
                android:maxWidth="100dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/random_check_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/normal_bg_three"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/getvernum"
                android:textColor="@color/md_white_1000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/sex"
                android:textSize="20dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:checked="true"
                    android:text="@string/male" />


                <RadioButton
                    android:id="@+id/sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_rect_light_orange"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_use_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/use_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_pro"
            android:textColor="@color/md_blue_500"
            android:textSize="13sp" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>